[FIX] themes: Make the wikiactions page actions menu appear in front of sticky autotoc which now has z-index of 1021

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -4055,6 +4055,9 @@ table.tablesorter thead tr.tablesorter-filter-row td input.tablesorter-filter, t
 .wikiactions > .btn-group {
   display: inline-block;
 }
+.wikiactions .dropdown-menu.show {
+  z-index: 1021;
+}
 .conveneHeaderRow td {
   text-align: center;
 }
